@@ -194,14 +194,12 @@ product_config = """\
     write-token writetnk
     read-url http://localhost:%s/
     write-url http://localhost:%s/
-    source-serie file://%s
     timeout 300
     video-folder video
     playlist-folder video/playlist
 </product-config>
 """ % (httpd_port,
-       httpd_port,
-       pkg_resources.resource_filename(__name__, 'tests/serie.xml'))
+       httpd_port)
 
 
 BrightcoveZCMLLayer = zeit.cms.testing.ZCMLLayer(
