@@ -1,9 +1,0 @@
-<?xml version="1.0"?>
-<series>
-<serie>VIDEO</serie>
-<serie>erde/energie</serie>
-<serie>erde/klima</serie>
-<serie>erde/nachhaltigkeit</serie>
-<serie>erde/technologie</serie>
-<serie>erde/umwelt</serie>
-</series>
